# vscode-cppprojects

./: .gitignore  README.md  cppprojects.code-workspace
helloworld/: CHANGELOG.md
helloworld/src/: helloworld.cpp
helloworld2/: CMakeLists.txt  README.md
helloworld2/src/: helloworld.cpp
